--- a/Problem Set 1/code/params.toml
+++ b/Problem Set 1/code/params.toml
@@ -1,10 +1,8 @@
 # constants
-N = 100
 M = 100
 J = 3
 
 # demand side parameters 
-[theta]
 betas = [5, 1, 1]
 alpha = 1
 sigma_alpha = 1
@@ -14,33 +12,40 @@ gammas = [2, 1, 1]
 
 # product characteristics
 [X.X2]
+# uniform distribution 
 a = 0
 b = 1
 
 [X.X3]
+# normal distribution 
 mu = 0
 sigma = 1
 
 # consumer heterogeneity 
 [nu]
+# log normal distribution 
 mu = 0
 sigma = 1
 
 # demand shocks 
 [xi]
+# normal distribution
 mu = 0 
 sigma = 1
 
 # cost shifters 
 [cost.W]
+# log normal distribution 
 mu = 0
 sigma = 1
 
 [cost.Z]
+# log normal distribution 
 mu = 0 
 sigma = 1
 
 [cost.eta]
+# log normal distribution 
 mu = 0 
 sigma = 1
 
