--- a/Mini_Project/code/params.toml
+++ b/Mini_Project/code/params.toml
@@ -1,8 +1,5 @@
 ####### Parameters 
-
-J = 3
-I = 100
-p_black = 0.5
+J = 5
 
 # Production function
 gamma_HH = -0.2
@@ -25,6 +22,17 @@ beta_a  = [0.6, 0.4]
 beta_st = [0.2, 0.5]
 beta_w  = [0.6, 0.5]
 zeta = 0.8
+
+# Demographics
+[H]
+N = 100
+p_black = 0.2
+p_state = 0.1
+
+[L]
+N = 200
+p_black = 0.4
+p_state = 0.2
 
 ###### Observables
 # Housing supply 
@@ -49,10 +57,6 @@ mu = 0
 sigma = 1 
 
 [a]
-mu = 0
-sigma = 1
-
-[dist]
 mu = 0
 sigma = 1
 
